# websearch-portal

./: .gitignore  README.md  index.html  package-lock.json
backend/: README.md  pyproject.toml
backend/app/: note.ipynb  remoterun.py  server.py
src/: App.tsx
src/components/: SearchResult.tsx
src/context/: AuthContext.tsx  SearchContext.tsx
src/pages/: History.tsx  Index.tsx  ResultPage.tsx  Search.tsx
